# audio_playground

./: .gitignore  CMakeLists.txt  LICENSE  README.md  audio_loader.c  converter.c  gain.c  main.c  main.cpp
audio/: logsweep_in.pcm  sine_1kHz_in.pcm  sine_1kHz_out.pcm
